--- a/.github/workflows/ghcr-publish.yml
+++ b/.github/workflows/ghcr-publish.yml
@@ -66,7 +66,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            "type=raw,value={{date 'X'}}-{{tag}}{{branch}}-{{sha}}"
+            "type=raw,value={{date 'X'}}_{{tag}}{{branch}}_{{sha}}"
             "type=raw,value=latest"
             "type=ref,event=tag"
             "type=semver,pattern=v{{major}}"
@@ -78,7 +78,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@v3
         with:
-          context: "{{defaultContext}}:jiracmdline"
+          #context: "{{defaultContext}}:jiracmdline"
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
